--- a/fitting.qmd
+++ b/fitting.qmd
@@ -364,7 +364,7 @@ gamlss2::GAIC(mlinear, madditive, mneural, mregtree, mcf, k=2)
 
 ## end
 
-[back to the index](https://mstasinopoulos.github.io/Porto_short_course/)
+[back to the index](https://mstasinopoulos.github.io/Brazil2025/)
 
 ::: {layout-ncol="3," layout-nrow="1"}
 ![](book-1.png){width="300"} ![](BOOK-2.png){width="323"} ![](book3.png){width="333"} The Books
